--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -14,6 +14,7 @@ These changes are done and will be in Mace 1.9:
  * New buildings: Large ruins (medieval theme), Shop (desert theme), three houses (desert theme), compound (desert theme), gallows (medieval theme, unique), large market (medieval theme, unique), alchemist (medieval theme).
  * Lots of the new blocks are being used: window panes, stone bricks, iron bars, melons, pumpkins, slabs, fence gates...
  * Small improvements to a few existing buildings.
+ * Added a different sky feature. Mace will randomly select one sky feature per medieval city.
 
 *Options*
  * Added an option to export schematics of each city. These are saved in the world directory. I don't want to make it more complicated than that, because it would make compatibility with Linux/OSX harder.
@@ -31,3 +32,4 @@ These changes are done and will be in Mace 1.9:
  * Added rotation code for: brick stairs, nether brick stairs, stone brick stairs, fence gates, burning furnaces, open trapdoors, redstone repeaters, levers, pistons, detector rails, powered rails, vines, huge mushrooms.
  * Flag patterns are now stored in files in the resource folder.
  * Blocks that make up the underground are now specified in the theme files.
+ * Each theme can now have multiple possible sky features. Mace will select a random one for each city.
