--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -8,9 +8,7 @@ The focus for Mace 1.9 will be the content.
 == Planned ==
 
  * Theme generator (I'll do this when I'm happy with the structure of the theme files)
- * More buildings
-  * City hall (unique)
-  * ...
+ * More buildings (City hall, etc)
  * Improve the existing buildings (less square!)
  * Add a boathouse when there's a water moat
  * Add an option to generate empty plots for a multiplayer server (make this a theme?)
@@ -24,6 +22,7 @@ The focus for Mace 1.9 will be the content.
   * Collapsed sections
   * Braces
   * Ladders up/down
+  * Larger mineshaft sections
  * Maps
   * City / World
   * Wanted posters, bakery lists, book covers...
