Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -23,6 +23,7 @@ These changes are done and will be in Mace 1.9:
 
 *Other*
  * The ground underneath desert cities will now contain more sand and sandstone.
+ * Added random splash text, just like Minecraft!
 
 *Code*
  * Updated to Substrate 1.0.1.
