Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -24,6 +24,7 @@ These changes are done and will be in Mace 1.9:
 *Other*
  * The ground underneath desert cities will now contain more sand and sandstone.
  * Added random splash text, just like Minecraft!
+ * Removed/added lots of the random text that makes up city/road names.
 
 *Code*
  * Updated to Substrate 1.0.1.
