--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -6,11 +6,17 @@ I am currently writing v1.10. The main focus of this update will be the Theme Ge
 === To Do ===
 
   * Add a fence around the bedrock moat.
+  * Need some way to control the amount of valuable resources.
+  * Need some way to limit the amount of mineshaft levels.
 
 === In Progress ===
 
   * Make sure I'm happy with the XML file structure/identifiers.
   * Write a theme generator.
+     * Interface: 80% done
+     * Validating user selections: 80% done
+     * Writing theme file: 0% done
+     * Testing: 0% done
 
 === Done ===
   * Put a real mushroom on top of the mushroom farm. Thanks to coau14 for this suggestion.
