--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -6,7 +6,6 @@ I am currently writing v1.10. The main focus of this update will be the Theme Ge
 === To Do ===
 
   * Need some way to control the amount of valuable resources.
-  * Need some way to limit the amount of mineshaft levels.
 
 === In Progress ===
 
@@ -23,3 +22,4 @@ I am currently writing v1.10. The main focus of this update will be the Theme Ge
   * Updated screenshots of Mace.
   * Moved buildings to more logical places in the resource world.
   * Added some more combinations to the desert city names.
+  * You can now control which levels of the mineshaft will appear. Edit the end of the mineshaft.xml file to do this.
