--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -22,4 +22,5 @@ I am currently writing v1.10. The main focus of this update will be the Theme Ge
   * Updated screenshots of Mace.
   * Moved buildings to more logical places in the resource world.
   * Added some more combinations to the desert city names.
+  * Added some more combinations to the world names.
   * You can now control which levels of the mineshaft will appear. Edit the end of the mineshaft.xml file to do this.
