--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -22,6 +22,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Check upside-down stairs
   * Check chest rotations
  * Time warning when generated more than five/ten cities
+ * NPC xml file
  * More buildings
    * coau14's buildings
    * City hall
