--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -2,3 +2,4 @@
 #labels Featured
 
  * Fixed a bug in the city entrance validation code for custom themes. Thank you to empyreanunseen for letting me know about this.
+ * Fixed a bug with various plant types in custom themes. Thank you to coau14 for letting me know about this.
