Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -12,6 +12,8 @@ In Progress
 
 Planned
 
+ * Door rotation code
+ * Other rotation code
  * Handle dispensers
  * Investigate better distribution of building frequencies
  * Replace SplitContainer with a different control
