--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,10 +7,12 @@ Done
  * The resource world has been converted to Anvil format.
  * Fixed a bug in the city entrance validation code for custom themes. Thank you to empyreanunseen for letting me know about this.
  * Fixed a bug with various plant types in custom themes. Thank you to coau14 for letting me know about this.
- * Double doors are no longer broken.
  * Desert cities are set to be in the desert biome. This means they will no longer get rain or snow.
- * Items in brewing stands in the resource world are now copied to the output world. (Items in furnaces were already being copied over.)
- * Inverted stairs in the resource world are correctly handled when imported.
+ * Items in brewing stands and dispensers in the resource world are now copied to the output world. Items in furnaces were already being copied over.
+ * Inverted stairs in the resource world are correctly handled when imported. Inverted half-slabs were already working.
+ * Updated the door data to Anvil format. This means doors will be rotated correctly again.
+ * Added a trap to the mineshaft.
+ * Custom themes can now have empty plots. These are useful if you want to start building straight away.
 
 Planned
 
