--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -13,11 +13,11 @@ Done
  * Updated the door data to Anvil format. This means doors will be rotated correctly again.
  * Added a trap to the mineshaft.
  * Custom themes can now have empty plots. These are useful if you want to start building straight away.
+ * Added two more city entrances.
 
 Planned
 
  * Option to eliminate the main streets
- * Handle dispensers
  * Investigate better distribution of building frequencies
  * Replace SplitContainer with a different control
  * Check buggy spawning of NPCs in Anvil
